feat: add clear-cache script and update README with cache clearing instructions

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "task": "bun scripts/task.ts",
     "build:test": "bun task build && bun test",
     "build:publish": "bun task build && bun task report-size && bun task publish",
+    "clear-cache": "bun scripts/clear-cache.ts",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
